--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.1.4",
     "axios": "^1.6.7",
     "cookies": "^0.9.1",
     "country-codes-list": "^1.6.11",
