--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.1.4",
+    "@splidejs/splide": "^4.1.4",
     "axios": "^1.6.7",
     "cookies": "^0.9.1",
     "country-codes-list": "^1.6.11",
