--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "cookies": "^0.9.1",
     "country-codes-list": "^1.6.11",
     "google-libphonenumber": "^3.2.34",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "libphonenumber-js": "^1.10.54",
     "next": "^14.1.0",
     "node-mailer": "^0.1.1",
+    "npm": "^10.5.1",
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
@@ -27,7 +29,10 @@
     "react-password-strength-bar": "^0.4.1",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.9",
-    "router": "^1.3.8"
+    "react-slick": "^0.30.2",
+    "router": "^1.3.8",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
@@ -35,6 +40,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
