--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@next/font": "^14.1.4",
     "@splidejs/splide": "^4.1.4",
     "axios": "^1.6.7",
@@ -32,6 +38,7 @@
     "react-slick": "^0.30.2",
     "router": "^1.3.8",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.8",
     "swiper": "^11.1.0"
   },
   "devDependencies": {
