--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "@next/font": "^14.1.4",
+    "@next/third-parties": "^14.1.4",
     "@splidejs/splide": "^4.1.4",
     "axios": "^1.6.7",
     "cookies": "^0.9.1",
